--- a/angular.json
+++ b/angular.json
@@ -19,10 +19,14 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/favicon.ico",
+              "src/assets",
               {
                 "glob": "**/*",
                 "input": "public"
               }
+                
+
             ],
             "styles": [
               "src/styles.css"
